lexer_toml4/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> toml
Rule 1     toml -> expression_list
Rule 2     expression_list -> NEWLINE expression_list
Rule 3     expression_list -> expression NEWLINE expression_list
Rule 4     expression_list -> expression
Rule 5     expression -> comment
Rule 6     expression -> key_val
Rule 7     expression -> key_val comment
Rule 8     comment -> COMMENT_START comment_string
Rule 9     comment_string -> comment_char
Rule 10    comment_string -> comment_char comment_string
Rule 11    comment_char -> ASCII_CHAR
Rule 12    comment_char -> ASCII_DIGIT
Rule 13    comment_char -> UNICODE_CHAR
Rule 14    comment_char -> UNICODE_NUMBER
Rule 15    comment_char -> UNICODE_PUNCTUATION
Rule 16    comment_char -> COMMENT_START
Rule 17    comment_char -> DASH
Rule 18    comment_char -> UNDERSCORE
Rule 19    comment_char -> WHITESPACE
Rule 20    comment_char -> PLUS
Rule 21    key_val -> key ASSIGNMENT value
Rule 22    key -> simple_key
Rule 23    key -> dotted_key
Rule 24    simple_key -> bare_key
Rule 25    simple_key -> quoted_key
Rule 26    bare_key -> bare_key_sequence
Rule 27    bare_key_sequence -> bare_key_char
Rule 28    bare_key_sequence -> bare_key_char bare_key_sequence
Rule 29    bare_key_char -> ASCII_CHAR
Rule 30    bare_key_char -> ASCII_DIGIT
Rule 31    bare_key_char -> UNICODE_NUMBER
Rule 32    bare_key_char -> DASH
Rule 33    bare_key_char -> UNDERSCORE
Rule 34    quoted_key -> basic_string
Rule 35    quoted_key -> literal_string
Rule 36    dotted_key -> simple_key DOT simple_key
Rule 37    value -> basic_string
Rule 38    value -> literal_string
Rule 39    value -> integer
Rule 40    value -> float
Rule 41    value -> boolean
Rule 42    basic_string -> BASIC_STR_QUOTE BASIC_STR_QUOTE
Rule 43    basic_string -> BASIC_STR_QUOTE basic_string_sequence BASIC_STR_QUOTE
Rule 44    basic_string_sequence -> basic_string_char
Rule 45    basic_string_sequence -> basic_string_char basic_string_sequence
Rule 46    basic_string_char -> ASCII_CHAR
Rule 47    basic_string_char -> ASCII_DIGIT
Rule 48    basic_string_char -> UNICODE_CHAR
Rule 49    basic_string_char -> UNICODE_NUMBER
Rule 50    basic_string_char -> UNICODE_PUNCTUATION
Rule 51    basic_string_char -> UNICODE_CONTROL
Rule 52    basic_string_char -> UNICODE_SYMBOL
Rule 53    basic_string_char -> UNICODE_SEPARATOR
Rule 54    basic_string_char -> UNICODE_PRIVATE_USE
Rule 55    basic_string_char -> LITERAL_STR_QUOTE
Rule 56    basic_string_char -> DASH
Rule 57    basic_string_char -> UNDERSCORE
Rule 58    basic_string_char -> WHITESPACE
Rule 59    basic_string_char -> DOT
Rule 60    basic_string_char -> COMMENT_START
Rule 61    basic_string_char -> PLUS
Rule 62    basic_string_char -> escape
Rule 63    literal_string -> LITERAL_STR_QUOTE LITERAL_STR_QUOTE
Rule 64    literal_string -> LITERAL_STR_QUOTE literal_string_sequence LITERAL_STR_QUOTE
Rule 65    literal_string_sequence -> literal_string_char
Rule 66    literal_string_sequence -> literal_string_char literal_string_sequence
Rule 67    literal_string_char -> ASCII_CHAR
Rule 68    literal_string_char -> ASCII_DIGIT
Rule 69    literal_string_char -> UNICODE_CHAR
Rule 70    literal_string_char -> UNICODE_NUMBER
Rule 71    literal_string_char -> UNICODE_PUNCTUATION
Rule 72    literal_string_char -> UNICODE_CONTROL
Rule 73    literal_string_char -> UNICODE_SYMBOL
Rule 74    literal_string_char -> UNICODE_SEPARATOR
Rule 75    literal_string_char -> UNICODE_PRIVATE_USE
Rule 76    literal_string_char -> BASIC_STR_QUOTE
Rule 77    literal_string_char -> DASH
Rule 78    literal_string_char -> UNDERSCORE
Rule 79    literal_string_char -> WHITESPACE
Rule 80    literal_string_char -> DOT
Rule 81    literal_string_char -> COMMENT_START
Rule 82    literal_string_char -> REVERSE_SOLIDUS
Rule 83    literal_string_char -> PLUS
Rule 84    literal_string_char -> MINUS
Rule 85    escape -> REVERSE_SOLIDUS escape_char
Rule 86    escape_char -> LITERAL_STR_QUOTE
Rule 87    escape_char -> BASIC_STR_QUOTE
Rule 88    escape_char -> REVERSE_SOLIDUS
Rule 89    escape_char -> ASCII_CHAR
Rule 90    integer -> dec_int
Rule 91    dec_int -> dec_int_sequence
Rule 92    dec_int -> PLUS dec_int_sequence
Rule 93    dec_int -> DASH dec_int_sequence
Rule 94    dec_int_sequence -> dec_int_char
Rule 95    dec_int_sequence -> dec_int_char dec_int_sequence
Rule 96    dec_int_char -> ASCII_DIGIT
Rule 97    float -> dec_float
Rule 98    dec_float -> integer DOT integer
Rule 99    dec_float -> integer DOT integer exponent
Rule 100   dec_float -> integer exponent
Rule 101   exponent -> ASCII_CHAR integer
Rule 102   boolean -> true
Rule 103   boolean -> false
Rule 104   true -> ASCII_CHAR ASCII_CHAR ASCII_CHAR ASCII_CHAR
Rule 105   false -> ASCII_CHAR ASCII_CHAR ASCII_CHAR ASCII_CHAR ASCII_CHAR

Terminals, with rules where they appear

ASCII_CHAR           : 11 29 46 67 89 101 104 104 104 104 105 105 105 105 105
ASCII_DIGIT          : 12 30 47 68 96
ASSIGNMENT           : 21
BASIC_STR_QUOTE      : 42 42 43 43 76 87
COMMENT_START        : 8 16 60 81
DASH                 : 17 32 56 77 93
DOT                  : 36 59 80 98 99
LITERAL_STR_QUOTE    : 55 63 63 64 64 86
MINUS                : 84
NEWLINE              : 2 3
PLUS                 : 20 61 83 92
REVERSE_SOLIDUS      : 82 85 88
UNDERSCORE           : 18 33 57 78
UNICODE_CHAR         : 13 48 69
UNICODE_CONTROL      : 51 72
UNICODE_NUMBER       : 14 31 49 70
UNICODE_PRIVATE_USE  : 54 75
UNICODE_PUNCTUATION  : 15 50 71
UNICODE_SEPARATOR    : 53 74
UNICODE_SYMBOL       : 52 73
WHITESPACE           : 19 58 79
error                : 

Nonterminals, with rules where they appear

bare_key             : 24
bare_key_char        : 27 28
bare_key_sequence    : 26 28
basic_string         : 34 37
basic_string_char    : 44 45
basic_string_sequence : 43 45
boolean              : 41
comment              : 5 7
comment_char         : 9 10
comment_string       : 8 10
dec_float            : 97
dec_int              : 90
dec_int_char         : 94 95
dec_int_sequence     : 91 92 93 95
dotted_key           : 23
escape               : 62
escape_char          : 85
exponent             : 99 100
expression           : 3 4
expression_list      : 1 2 3
false                : 103
float                : 40
integer              : 39 98 98 99 99 100 101
key                  : 21
key_val              : 6 7
literal_string       : 35 38
literal_string_char  : 65 66
literal_string_sequence : 64 66
quoted_key           : 25
simple_key           : 22 36 36
toml                 : 0
true                 : 102
value                : 21

Parsing method: LALR

state 0

    (0) S' -> . toml
    (1) toml -> . expression_list
    (2) expression_list -> . NEWLINE expression_list
    (3) expression_list -> . expression NEWLINE expression_list
    (4) expression_list -> . expression
    (5) expression -> . comment
    (6) expression -> . key_val
    (7) expression -> . key_val comment
    (8) comment -> . COMMENT_START comment_string
    (21) key_val -> . key ASSIGNMENT value
    (22) key -> . simple_key
    (23) key -> . dotted_key
    (24) simple_key -> . bare_key
    (25) simple_key -> . quoted_key
    (36) dotted_key -> . simple_key DOT simple_key
    (26) bare_key -> . bare_key_sequence
    (34) quoted_key -> . basic_string
    (35) quoted_key -> . literal_string
    (27) bare_key_sequence -> . bare_key_char
    (28) bare_key_sequence -> . bare_key_char bare_key_sequence
    (42) basic_string -> . BASIC_STR_QUOTE BASIC_STR_QUOTE
    (43) basic_string -> . BASIC_STR_QUOTE basic_string_sequence BASIC_STR_QUOTE
    (63) literal_string -> . LITERAL_STR_QUOTE LITERAL_STR_QUOTE
    (64) literal_string -> . LITERAL_STR_QUOTE literal_string_sequence LITERAL_STR_QUOTE
    (29) bare_key_char -> . ASCII_CHAR
    (30) bare_key_char -> . ASCII_DIGIT
    (31) bare_key_char -> . UNICODE_NUMBER
    (32) bare_key_char -> . DASH
    (33) bare_key_char -> . UNDERSCORE

    NEWLINE         shift and go to state 3
    COMMENT_START   shift and go to state 7
    BASIC_STR_QUOTE shift and go to state 17
    LITERAL_STR_QUOTE shift and go to state 18
    ASCII_CHAR      shift and go to state 19
    ASCII_DIGIT     shift and go to state 20
    UNICODE_NUMBER  shift and go to state 21
    DASH            shift and go to state 22
    UNDERSCORE      shift and go to state 23

    toml                           shift and go to state 1
    expression_list                shift and go to state 2
    expression                     shift and go to state 4
    comment                        shift and go to state 5
    key_val                        shift and go to state 6
    key                            shift and go to state 8
    simple_key                     shift and go to state 9
    dotted_key                     shift and go to state 10
    bare_key                       shift and go to state 11
    quoted_key                     shift and go to state 12
    bare_key_sequence              shift and go to state 13
    basic_string                   shift and go to state 14
    literal_string                 shift and go to state 15
    bare_key_char                  shift and go to state 16

state 1

    (0) S' -> toml .



state 2

    (1) toml -> expression_list .

    $end            reduce using rule 1 (toml -> expression_list .)


state 3

    (2) expression_list -> NEWLINE . expression_list
    (2) expression_list -> . NEWLINE expression_list
    (3) expression_list -> . expression NEWLINE expression_list
    (4) expression_list -> . expression
    (5) expression -> . comment
    (6) expression -> . key_val
    (7) expression -> . key_val comment
    (8) comment -> . COMMENT_START comment_string
    (21) key_val -> . key ASSIGNMENT value
    (22) key -> . simple_key
    (23) key -> . dotted_key
    (24) simple_key -> . bare_key
    (25) simple_key -> . quoted_key
    (36) dotted_key -> . simple_key DOT simple_key
    (26) bare_key -> . bare_key_sequence
    (34) quoted_key -> . basic_string
    (35) quoted_key -> . literal_string
    (27) bare_key_sequence -> . bare_key_char
    (28) bare_key_sequence -> . bare_key_char bare_key_sequence
    (42) basic_string -> . BASIC_STR_QUOTE BASIC_STR_QUOTE
    (43) basic_string -> . BASIC_STR_QUOTE basic_string_sequence BASIC_STR_QUOTE
    (63) literal_string -> . LITERAL_STR_QUOTE LITERAL_STR_QUOTE
    (64) literal_string -> . LITERAL_STR_QUOTE literal_string_sequence LITERAL_STR_QUOTE
    (29) bare_key_char -> . ASCII_CHAR
    (30) bare_key_char -> . ASCII_DIGIT
    (31) bare_key_char -> . UNICODE_NUMBER
    (32) bare_key_char -> . DASH
    (33) bare_key_char -> . UNDERSCORE

    NEWLINE         shift and go to state 3
    COMMENT_START   shift and go to state 7
    BASIC_STR_QUOTE shift and go to state 17
    LITERAL_STR_QUOTE shift and go to state 18
    ASCII_CHAR      shift and go to state 19
    ASCII_DIGIT     shift and go to state 20
    UNICODE_NUMBER  shift and go to state 21
    DASH            shift and go to state 22
    UNDERSCORE      shift and go to state 23

    expression_list                shift and go to state 24
    expression                     shift and go to state 4
    comment                        shift and go to state 5
    key_val                        shift and go to state 6
    key                            shift and go to state 8
    simple_key                     shift and go to state 9
    dotted_key                     shift and go to state 10
    bare_key                       shift and go to state 11
    quoted_key                     shift and go to state 12
    bare_key_sequence              shift and go to state 13
    basic_string                   shift and go to state 14
    literal_string                 shift and go to state 15
    bare_key_char                  shift and go to state 16

state 4

    (3) expression_list -> expression . NEWLINE expression_list
    (4) expression_list -> expression .

    NEWLINE         shift and go to state 25
    $end            reduce using rule 4 (expression_list -> expression .)


state 5

    (5) expression -> comment .

    NEWLINE         reduce using rule 5 (expression -> comment .)
    $end            reduce using rule 5 (expression -> comment .)


state 6

    (6) expression -> key_val .
    (7) expression -> key_val . comment
    (8) comment -> . COMMENT_START comment_string

    NEWLINE         reduce using rule 6 (expression -> key_val .)
    $end            reduce using rule 6 (expression -> key_val .)
    COMMENT_START   shift and go to state 7

    comment                        shift and go to state 26

state 7

    (8) comment -> COMMENT_START . comment_string
    (9) comment_string -> . comment_char
    (10) comment_string -> . comment_char comment_string
    (11) comment_char -> . ASCII_CHAR
    (12) comment_char -> . ASCII_DIGIT
    (13) comment_char -> . UNICODE_CHAR
    (14) comment_char -> . UNICODE_NUMBER
    (15) comment_char -> . UNICODE_PUNCTUATION
    (16) comment_char -> . COMMENT_START
    (17) comment_char -> . DASH
    (18) comment_char -> . UNDERSCORE
    (19) comment_char -> . WHITESPACE
    (20) comment_char -> . PLUS

    ASCII_CHAR      shift and go to state 30
    ASCII_DIGIT     shift and go to state 31
    UNICODE_CHAR    shift and go to state 32
    UNICODE_NUMBER  shift and go to state 33
    UNICODE_PUNCTUATION shift and go to state 34
    COMMENT_START   shift and go to state 27
    DASH            shift and go to state 35
    UNDERSCORE      shift and go to state 36
    WHITESPACE      shift and go to state 37
    PLUS            shift and go to state 38

    comment_string                 shift and go to state 28
    comment_char                   shift and go to state 29

state 8

    (21) key_val -> key . ASSIGNMENT value

    ASSIGNMENT      shift and go to state 39


state 9

    (22) key -> simple_key .
    (36) dotted_key -> simple_key . DOT simple_key

    ASSIGNMENT      reduce using rule 22 (key -> simple_key .)
    DOT             shift and go to state 40


state 10

    (23) key -> dotted_key .

    ASSIGNMENT      reduce using rule 23 (key -> dotted_key .)


state 11

    (24) simple_key -> bare_key .

    DOT             reduce using rule 24 (simple_key -> bare_key .)
    ASSIGNMENT      reduce using rule 24 (simple_key -> bare_key .)


state 12

    (25) simple_key -> quoted_key .

    DOT             reduce using rule 25 (simple_key -> quoted_key .)
    ASSIGNMENT      reduce using rule 25 (simple_key -> quoted_key .)


state 13

    (26) bare_key -> bare_key_sequence .

    DOT             reduce using rule 26 (bare_key -> bare_key_sequence .)
    ASSIGNMENT      reduce using rule 26 (bare_key -> bare_key_sequence .)


state 14

    (34) quoted_key -> basic_string .

    DOT             reduce using rule 34 (quoted_key -> basic_string .)
    ASSIGNMENT      reduce using rule 34 (quoted_key -> basic_string .)


state 15

    (35) quoted_key -> literal_string .

    DOT             reduce using rule 35 (quoted_key -> literal_string .)
    ASSIGNMENT      reduce using rule 35 (quoted_key -> literal_string .)


state 16

    (27) bare_key_sequence -> bare_key_char .
    (28) bare_key_sequence -> bare_key_char . bare_key_sequence
    (27) bare_key_sequence -> . bare_key_char
    (28) bare_key_sequence -> . bare_key_char bare_key_sequence
    (29) bare_key_char -> . ASCII_CHAR
    (30) bare_key_char -> . ASCII_DIGIT
    (31) bare_key_char -> . UNICODE_NUMBER
    (32) bare_key_char -> . DASH
    (33) bare_key_char -> . UNDERSCORE

    DOT             reduce using rule 27 (bare_key_sequence -> bare_key_char .)
    ASSIGNMENT      reduce using rule 27 (bare_key_sequence -> bare_key_char .)
    ASCII_CHAR      shift and go to state 19
    ASCII_DIGIT     shift and go to state 20
    UNICODE_NUMBER  shift and go to state 21
    DASH            shift and go to state 22
    UNDERSCORE      shift and go to state 23

    bare_key_char                  shift and go to state 16
    bare_key_sequence              shift and go to state 41

state 17

    (42) basic_string -> BASIC_STR_QUOTE . BASIC_STR_QUOTE
    (43) basic_string -> BASIC_STR_QUOTE . basic_string_sequence BASIC_STR_QUOTE
    (44) basic_string_sequence -> . basic_string_char
    (45) basic_string_sequence -> . basic_string_char basic_string_sequence
    (46) basic_string_char -> . ASCII_CHAR
    (47) basic_string_char -> . ASCII_DIGIT
    (48) basic_string_char -> . UNICODE_CHAR
    (49) basic_string_char -> . UNICODE_NUMBER
    (50) basic_string_char -> . UNICODE_PUNCTUATION
    (51) basic_string_char -> . UNICODE_CONTROL
    (52) basic_string_char -> . UNICODE_SYMBOL
    (53) basic_string_char -> . UNICODE_SEPARATOR
    (54) basic_string_char -> . UNICODE_PRIVATE_USE
    (55) basic_string_char -> . LITERAL_STR_QUOTE
    (56) basic_string_char -> . DASH
    (57) basic_string_char -> . UNDERSCORE
    (58) basic_string_char -> . WHITESPACE
    (59) basic_string_char -> . DOT
    (60) basic_string_char -> . COMMENT_START
    (61) basic_string_char -> . PLUS
    (62) basic_string_char -> . escape
    (85) escape -> . REVERSE_SOLIDUS escape_char

    BASIC_STR_QUOTE shift and go to state 42
    ASCII_CHAR      shift and go to state 45
    ASCII_DIGIT     shift and go to state 46
    UNICODE_CHAR    shift and go to state 47
    UNICODE_NUMBER  shift and go to state 48
    UNICODE_PUNCTUATION shift and go to state 49
    UNICODE_CONTROL shift and go to state 50
    UNICODE_SYMBOL  shift and go to state 51
    UNICODE_SEPARATOR shift and go to state 52
    UNICODE_PRIVATE_USE shift and go to state 53
    LITERAL_STR_QUOTE shift and go to state 54
    DASH            shift and go to state 55
    UNDERSCORE      shift and go to state 56
    WHITESPACE      shift and go to state 57
    DOT             shift and go to state 58
    COMMENT_START   shift and go to state 59
    PLUS            shift and go to state 60
    REVERSE_SOLIDUS shift and go to state 62

    basic_string_sequence          shift and go to state 43
    basic_string_char              shift and go to state 44
    escape                         shift and go to state 61

state 18

    (63) literal_string -> LITERAL_STR_QUOTE . LITERAL_STR_QUOTE
    (64) literal_string -> LITERAL_STR_QUOTE . literal_string_sequence LITERAL_STR_QUOTE
    (65) literal_string_sequence -> . literal_string_char
    (66) literal_string_sequence -> . literal_string_char literal_string_sequence
    (67) literal_string_char -> . ASCII_CHAR
    (68) literal_string_char -> . ASCII_DIGIT
    (69) literal_string_char -> . UNICODE_CHAR
    (70) literal_string_char -> . UNICODE_NUMBER
    (71) literal_string_char -> . UNICODE_PUNCTUATION
    (72) literal_string_char -> . UNICODE_CONTROL
    (73) literal_string_char -> . UNICODE_SYMBOL
    (74) literal_string_char -> . UNICODE_SEPARATOR
    (75) literal_string_char -> . UNICODE_PRIVATE_USE
    (76) literal_string_char -> . BASIC_STR_QUOTE
    (77) literal_string_char -> . DASH
    (78) literal_string_char -> . UNDERSCORE
    (79) literal_string_char -> . WHITESPACE
    (80) literal_string_char -> . DOT
    (81) literal_string_char -> . COMMENT_START
    (82) literal_string_char -> . REVERSE_SOLIDUS
    (83) literal_string_char -> . PLUS
    (84) literal_string_char -> . MINUS

    LITERAL_STR_QUOTE shift and go to state 63
    ASCII_CHAR      shift and go to state 66
    ASCII_DIGIT     shift and go to state 67
    UNICODE_CHAR    shift and go to state 68
    UNICODE_NUMBER  shift and go to state 69
    UNICODE_PUNCTUATION shift and go to state 70
    UNICODE_CONTROL shift and go to state 71
    UNICODE_SYMBOL  shift and go to state 72
    UNICODE_SEPARATOR shift and go to state 73
    UNICODE_PRIVATE_USE shift and go to state 74
    BASIC_STR_QUOTE shift and go to state 75
    DASH            shift and go to state 76
    UNDERSCORE      shift and go to state 77
    WHITESPACE      shift and go to state 78
    DOT             shift and go to state 79
    COMMENT_START   shift and go to state 80
    REVERSE_SOLIDUS shift and go to state 81
    PLUS            shift and go to state 82
    MINUS           shift and go to state 83

    literal_string_sequence        shift and go to state 64
    literal_string_char            shift and go to state 65

state 19

    (29) bare_key_char -> ASCII_CHAR .

    ASCII_CHAR      reduce using rule 29 (bare_key_char -> ASCII_CHAR .)
    ASCII_DIGIT     reduce using rule 29 (bare_key_char -> ASCII_CHAR .)
    UNICODE_NUMBER  reduce using rule 29 (bare_key_char -> ASCII_CHAR .)
    DASH            reduce using rule 29 (bare_key_char -> ASCII_CHAR .)
    UNDERSCORE      reduce using rule 29 (bare_key_char -> ASCII_CHAR .)
    DOT             reduce using rule 29 (bare_key_char -> ASCII_CHAR .)
    ASSIGNMENT      reduce using rule 29 (bare_key_char -> ASCII_CHAR .)


state 20

    (30) bare_key_char -> ASCII_DIGIT .

    ASCII_CHAR      reduce using rule 30 (bare_key_char -> ASCII_DIGIT .)
    ASCII_DIGIT     reduce using rule 30 (bare_key_char -> ASCII_DIGIT .)
    UNICODE_NUMBER  reduce using rule 30 (bare_key_char -> ASCII_DIGIT .)
    DASH            reduce using rule 30 (bare_key_char -> ASCII_DIGIT .)
    UNDERSCORE      reduce using rule 30 (bare_key_char -> ASCII_DIGIT .)
    DOT             reduce using rule 30 (bare_key_char -> ASCII_DIGIT .)
    ASSIGNMENT      reduce using rule 30 (bare_key_char -> ASCII_DIGIT .)


state 21

    (31) bare_key_char -> UNICODE_NUMBER .

    ASCII_CHAR      reduce using rule 31 (bare_key_char -> UNICODE_NUMBER .)
    ASCII_DIGIT     reduce using rule 31 (bare_key_char -> UNICODE_NUMBER .)
    UNICODE_NUMBER  reduce using rule 31 (bare_key_char -> UNICODE_NUMBER .)
    DASH            reduce using rule 31 (bare_key_char -> UNICODE_NUMBER .)
    UNDERSCORE      reduce using rule 31 (bare_key_char -> UNICODE_NUMBER .)
    DOT             reduce using rule 31 (bare_key_char -> UNICODE_NUMBER .)
    ASSIGNMENT      reduce using rule 31 (bare_key_char -> UNICODE_NUMBER .)


state 22

    (32) bare_key_char -> DASH .

    ASCII_CHAR      reduce using rule 32 (bare_key_char -> DASH .)
    ASCII_DIGIT     reduce using rule 32 (bare_key_char -> DASH .)
    UNICODE_NUMBER  reduce using rule 32 (bare_key_char -> DASH .)
    DASH            reduce using rule 32 (bare_key_char -> DASH .)
    UNDERSCORE      reduce using rule 32 (bare_key_char -> DASH .)
    DOT             reduce using rule 32 (bare_key_char -> DASH .)
    ASSIGNMENT      reduce using rule 32 (bare_key_char -> DASH .)


state 23

    (33) bare_key_char -> UNDERSCORE .

    ASCII_CHAR      reduce using rule 33 (bare_key_char -> UNDERSCORE .)
    ASCII_DIGIT     reduce using rule 33 (bare_key_char -> UNDERSCORE .)
    UNICODE_NUMBER  reduce using rule 33 (bare_key_char -> UNDERSCORE .)
    DASH            reduce using rule 33 (bare_key_char -> UNDERSCORE .)
    UNDERSCORE      reduce using rule 33 (bare_key_char -> UNDERSCORE .)
    DOT             reduce using rule 33 (bare_key_char -> UNDERSCORE .)
    ASSIGNMENT      reduce using rule 33 (bare_key_char -> UNDERSCORE .)


state 24

    (2) expression_list -> NEWLINE expression_list .

    $end            reduce using rule 2 (expression_list -> NEWLINE expression_list .)


state 25

    (3) expression_list -> expression NEWLINE . expression_list
    (2) expression_list -> . NEWLINE expression_list
    (3) expression_list -> . expression NEWLINE expression_list
    (4) expression_list -> . expression
    (5) expression -> . comment
    (6) expression -> . key_val
    (7) expression -> . key_val comment
    (8) comment -> . COMMENT_START comment_string
    (21) key_val -> . key ASSIGNMENT value
    (22) key -> . simple_key
    (23) key -> . dotted_key
    (24) simple_key -> . bare_key
    (25) simple_key -> . quoted_key
    (36) dotted_key -> . simple_key DOT simple_key
    (26) bare_key -> . bare_key_sequence
    (34) quoted_key -> . basic_string
    (35) quoted_key -> . literal_string
    (27) bare_key_sequence -> . bare_key_char
    (28) bare_key_sequence -> . bare_key_char bare_key_sequence
    (42) basic_string -> . BASIC_STR_QUOTE BASIC_STR_QUOTE
    (43) basic_string -> . BASIC_STR_QUOTE basic_string_sequence BASIC_STR_QUOTE
    (63) literal_string -> . LITERAL_STR_QUOTE LITERAL_STR_QUOTE
    (64) literal_string -> . LITERAL_STR_QUOTE literal_string_sequence LITERAL_STR_QUOTE
    (29) bare_key_char -> . ASCII_CHAR
    (30) bare_key_char -> . ASCII_DIGIT
    (31) bare_key_char -> . UNICODE_NUMBER
    (32) bare_key_char -> . DASH
    (33) bare_key_char -> . UNDERSCORE

    NEWLINE         shift and go to state 3
    COMMENT_START   shift and go to state 7
    BASIC_STR_QUOTE shift and go to state 17
    LITERAL_STR_QUOTE shift and go to state 18
    ASCII_CHAR      shift and go to state 19
    ASCII_DIGIT     shift and go to state 20
    UNICODE_NUMBER  shift and go to state 21
    DASH            shift and go to state 22
    UNDERSCORE      shift and go to state 23

    expression                     shift and go to state 4
    expression_list                shift and go to state 84
    comment                        shift and go to state 5
    key_val                        shift and go to state 6
    key                            shift and go to state 8
    simple_key                     shift and go to state 9
    dotted_key                     shift and go to state 10
    bare_key                       shift and go to state 11
    quoted_key                     shift and go to state 12
    bare_key_sequence              shift and go to state 13
    basic_string                   shift and go to state 14
    literal_string                 shift and go to state 15
    bare_key_char                  shift and go to state 16

state 26

    (7) expression -> key_val comment .

    NEWLINE         reduce using rule 7 (expression -> key_val comment .)
    $end            reduce using rule 7 (expression -> key_val comment .)


state 27

    (16) comment_char -> COMMENT_START .

    ASCII_CHAR      reduce using rule 16 (comment_char -> COMMENT_START .)
    ASCII_DIGIT     reduce using rule 16 (comment_char -> COMMENT_START .)
    UNICODE_CHAR    reduce using rule 16 (comment_char -> COMMENT_START .)
    UNICODE_NUMBER  reduce using rule 16 (comment_char -> COMMENT_START .)
    UNICODE_PUNCTUATION reduce using rule 16 (comment_char -> COMMENT_START .)
    COMMENT_START   reduce using rule 16 (comment_char -> COMMENT_START .)
    DASH            reduce using rule 16 (comment_char -> COMMENT_START .)
    UNDERSCORE      reduce using rule 16 (comment_char -> COMMENT_START .)
    WHITESPACE      reduce using rule 16 (comment_char -> COMMENT_START .)
    PLUS            reduce using rule 16 (comment_char -> COMMENT_START .)
    NEWLINE         reduce using rule 16 (comment_char -> COMMENT_START .)
    $end            reduce using rule 16 (comment_char -> COMMENT_START .)


state 28

    (8) comment -> COMMENT_START comment_string .

    NEWLINE         reduce using rule 8 (comment -> COMMENT_START comment_string .)
    $end            reduce using rule 8 (comment -> COMMENT_START comment_string .)


state 29

    (9) comment_string -> comment_char .
    (10) comment_string -> comment_char . comment_string
    (9) comment_string -> . comment_char
    (10) comment_string -> . comment_char comment_string
    (11) comment_char -> . ASCII_CHAR
    (12) comment_char -> . ASCII_DIGIT
    (13) comment_char -> . UNICODE_CHAR
    (14) comment_char -> . UNICODE_NUMBER
    (15) comment_char -> . UNICODE_PUNCTUATION
    (16) comment_char -> . COMMENT_START
    (17) comment_char -> . DASH
    (18) comment_char -> . UNDERSCORE
    (19) comment_char -> . WHITESPACE
    (20) comment_char -> . PLUS

    NEWLINE         reduce using rule 9 (comment_string -> comment_char .)
    $end            reduce using rule 9 (comment_string -> comment_char .)
    ASCII_CHAR      shift and go to state 30
    ASCII_DIGIT     shift and go to state 31
    UNICODE_CHAR    shift and go to state 32
    UNICODE_NUMBER  shift and go to state 33
    UNICODE_PUNCTUATION shift and go to state 34
    COMMENT_START   shift and go to state 27
    DASH            shift and go to state 35
    UNDERSCORE      shift and go to state 36
    WHITESPACE      shift and go to state 37
    PLUS            shift and go to state 38

    comment_char                   shift and go to state 29
    comment_string                 shift and go to state 85

state 30

    (11) comment_char -> ASCII_CHAR .

    ASCII_CHAR      reduce using rule 11 (comment_char -> ASCII_CHAR .)
    ASCII_DIGIT     reduce using rule 11 (comment_char -> ASCII_CHAR .)
    UNICODE_CHAR    reduce using rule 11 (comment_char -> ASCII_CHAR .)
    UNICODE_NUMBER  reduce using rule 11 (comment_char -> ASCII_CHAR .)
    UNICODE_PUNCTUATION reduce using rule 11 (comment_char -> ASCII_CHAR .)
    COMMENT_START   reduce using rule 11 (comment_char -> ASCII_CHAR .)
    DASH            reduce using rule 11 (comment_char -> ASCII_CHAR .)
    UNDERSCORE      reduce using rule 11 (comment_char -> ASCII_CHAR .)
    WHITESPACE      reduce using rule 11 (comment_char -> ASCII_CHAR .)
    PLUS            reduce using rule 11 (comment_char -> ASCII_CHAR .)
    NEWLINE         reduce using rule 11 (comment_char -> ASCII_CHAR .)
    $end            reduce using rule 11 (comment_char -> ASCII_CHAR .)


state 31

    (12) comment_char -> ASCII_DIGIT .

    ASCII_CHAR      reduce using rule 12 (comment_char -> ASCII_DIGIT .)
    ASCII_DIGIT     reduce using rule 12 (comment_char -> ASCII_DIGIT .)
    UNICODE_CHAR    reduce using rule 12 (comment_char -> ASCII_DIGIT .)
    UNICODE_NUMBER  reduce using rule 12 (comment_char -> ASCII_DIGIT .)
    UNICODE_PUNCTUATION reduce using rule 12 (comment_char -> ASCII_DIGIT .)
    COMMENT_START   reduce using rule 12 (comment_char -> ASCII_DIGIT .)
    DASH            reduce using rule 12 (comment_char -> ASCII_DIGIT .)
    UNDERSCORE      reduce using rule 12 (comment_char -> ASCII_DIGIT .)
    WHITESPACE      reduce using rule 12 (comment_char -> ASCII_DIGIT .)
    PLUS            reduce using rule 12 (comment_char -> ASCII_DIGIT .)
    NEWLINE         reduce using rule 12 (comment_char -> ASCII_DIGIT .)
    $end            reduce using rule 12 (comment_char -> ASCII_DIGIT .)


state 32

    (13) comment_char -> UNICODE_CHAR .

    ASCII_CHAR      reduce using rule 13 (comment_char -> UNICODE_CHAR .)
    ASCII_DIGIT     reduce using rule 13 (comment_char -> UNICODE_CHAR .)
    UNICODE_CHAR    reduce using rule 13 (comment_char -> UNICODE_CHAR .)
    UNICODE_NUMBER  reduce using rule 13 (comment_char -> UNICODE_CHAR .)
    UNICODE_PUNCTUATION reduce using rule 13 (comment_char -> UNICODE_CHAR .)
    COMMENT_START   reduce using rule 13 (comment_char -> UNICODE_CHAR .)
    DASH            reduce using rule 13 (comment_char -> UNICODE_CHAR .)
    UNDERSCORE      reduce using rule 13 (comment_char -> UNICODE_CHAR .)
    WHITESPACE      reduce using rule 13 (comment_char -> UNICODE_CHAR .)
    PLUS            reduce using rule 13 (comment_char -> UNICODE_CHAR .)
    NEWLINE         reduce using rule 13 (comment_char -> UNICODE_CHAR .)
    $end            reduce using rule 13 (comment_char -> UNICODE_CHAR .)


state 33

    (14) comment_char -> UNICODE_NUMBER .
